--- a/try_Statistical_Consulting.Rmd
+++ b/try_Statistical_Consulting.Rmd
@@ -87,9 +87,15 @@ df$number_of_ABX_first_year<- replace(df$number_of_ABX_first_year, is.na(df$numb
 df <- df %>% drop_na(AD_first_year, FA_first_year, ABX_fisrt_year,food_allergy_24_month, inhalation_24_month, AD_24_month) 
 
 #Creating dependent variables:
+df$FA_second_year <-  df$food_allergy_24_month
+df$AD_second_year <- df$AD_24_month
+df$HRAD_second_year <- df$inhalation_24_month
+df$ABX_second_year <- df$ABX_treatment_24_months
+
 #option A of explanatory var:
-df <- df %>% mutate(is_atopic_first_year = ifelse((AD_first_year + FA_first_year + ABX_fisrt_year)>0,1,0), 
-                    is_atopic_second_year = ifelse((food_allergy_24_month + inhalation_24_month + AD_24_month)>0,1,0))
+df <- df %>% mutate(is_atopic_first_year = ifelse((AD_first_year + FA_first_year + ABX_fisrt_year + HRAD_first_year)>0,1,0), 
+                    is_atopic_second_year = ifelse((AD_24_month + FA_second_year + ABX_second_year + HRAD_second_year)>0,1,0))
+
 #option B of explanatory var:
 #From mail
 
@@ -102,6 +108,14 @@ group3 <- as.Date("2021-02-07")
 df <- df %>% mutate(covid_time = ifelse(DOB < group1, 1, ifelse(DOB < group2, 2, ifelse(DOB<group3, 3, 4))))
 table(df$covid_time)
 
+
+df <- df %>% mutate(
+        family_asthma = ifelse(mother_asthma + father_asthma + sibling1_asthma + sibling2_asthma + sibling3_asthma + sibling4_asthma >0,1,0),
+        family_AD = ifelse(mother_atopic_dermatitis + father_atopic_dermatitis + sibling1_atopic_dermatitis + sibling2_atopic_dermatitis + sibling3_atopic_dermatitis + sibling4_atopic_dermatitis >0,1,0),
+        family_Allergic_rhinitis = ifelse(mother_Allergic_rhinitis + father_Allergic_rhinitis + sibling1_Allergic_rhinitis + sibling2_Allergic_rhinitis + sibling3_Allergic_rhinitis + sibling4_Allergic_rhinitis >0,1,0),
+        family_FA = ifelse(mother_food_allergy + father_food_allergy + sibling1_food_allergy + sibling2_food_allergy + sibling3_food_allergy + sibling4_food_allergy >0,1,0))
+
+
 # at this moment there is no sutible data from group 4 - post corona 
 attach(df)
 ```
@@ -113,20 +127,28 @@ tablelist <- mapply(table, df %>% select(-c(record_id, DOB, mother_year_birth)))
 # tablelist
 ```
 
+
 # NA count 
 ```{r}
+library(pander)
 # How many NA are in each column
 NA_count <- as.data.frame(t(df %>% summarise_all(funs(sum(is.na(.)))))) %>% dplyr::rename("amount of NA" = 1) 
 NA_count <- NA_count %>% mutate(Name = rownames(NA_count))
 NA_column = NA_count %>% filter(`amount of NA` >0) %>% arrange(`amount of NA`)
+
+n = 1439
+xxx <- df[is.na(df$mother_education),]
+
+ftable(xxx$covid_time, xxx$is_atopic_first_year) / rowSums(ftable(xxx$covid_time, xxx$is_atopic_first_year))
+# ftable(xxx$covid_time, xxx$is_atopic_first_year)/ #166
+ftable(xxx$covid_time, xxx$is_atopic_first_year)
+
+ftable(covid_time, is_atopic_first_year) / rowSums(ftable(covid_time, is_atopic_first_year))
+# ftable(covid_time, is_atopic_first_year) /n
+ftable(covid_time, is_atopic_first_year)
+
 ```
 
-# rename column in the data frame:
-```{r}
-df$FA_second_year <-  df$food_allergy_24_month
-df$AD_second_year <- df$AD_24_month
-df$HRAD_second_year <- df$inhalation_24_month
-```
 
 # arrange all the colnames by type
 ```{r}
@@ -142,10 +164,7 @@ full_binari_exp <- c('Jew/Arab', 'gender', 'Allergy_total',
                 'hospitalization_24_months', 'chronic_disease_24',
                 'family_Atopic_diseases', 'mother_Atopic_diseases', 'father_Atopic_diseases', 'sibling_Atopic_diseases')
 
-binari_exp <- c('Jew/Arab', 'gender', 'Allergy_total', 
-                'mother_asthma', 'mother_atopic_dermatitis', 'mother_Allergic_rhinitis', 'mother_food_allergy', 
-                'father_asthma', 'father_atopic_dermatitis', 'father_Allergic_rhinitis', 'father_food_allergy', 
-                'vaccine_12mo', 'prevention_therapy',
+binari_exp <- c('Jew/Arab', 'gender', 'Allergy_total','vaccine_12mo', 'prevention_therapy',
                 'family_Atopic_diseases', 'mother_Atopic_diseases', 'father_Atopic_diseases', 'sibling_Atopic_diseases')
 
 continues_exp <- c('mother_year_birth', 'DOB', 'mother_education')
@@ -157,15 +176,17 @@ discrite_exp <- c('SES', 'number_of_children', 'preganancy_number', 'number_of_A
 categoric_exp <- c('type_of_pregnancy', 'nursing_setup_at_12mo', 'covid_time')
 
 #MOOSBAR
-exploreatory_variables <- c('HRAD_first_year', 'AD_first_year', 'FA_first_year',
-                            'HRAD_second_year', 'AD_second_year', 'FA_second_year',
+exploreatory_variables <- c('HRAD_first_year', 'AD_first_year', 'FA_first_year', 'ABX_fisrt_year',
+                            'HRAD_second_year', 'AD_second_year', 'FA_second_year', 'ABX_second_year',
                             'is_atopic_first_year', 'is_atopic_second_year') 
-
 ```
 
 
 # Two dim table - covid time VS each column 
 ```{r}
+# table(is_atopic_first_year, covid_time)
+# table(is_atopic_second_year, covid_time)
+
 covid_time_table <- function(kpi){
   return(list(perc = round(ftable(covid_time, df[[kpi]]) / rowSums(ftable(covid_time, df[[kpi]])),3),
               n = table(covid_time, df[[kpi]])))}
@@ -173,74 +194,76 @@ covid_time_table <- function(kpi){
 # sapply(binari_exp, covid_time_table, simplify =FALSE)
 # sapply(discrite_exp, covid_time_table, simplify =FALSE)
 # sapply(categoric_exp, covid_time_table, simplify =FALSE)
-# sapply(exploreatory_variables, covid_time_table, simplify =FALSE)
+sapply(exploreatory_variables, covid_time_table, simplify =FALSE)
 ```
 
 
+```{r}
+variable_list = c('is_atopic_first_year', 'is_atopic_second_year')
 
+covid_time_graphs <- function(kpi){
+  return (ggplot(df, aes(x=covid_time, group = as.factor(df[[kpi]]), fill=as.factor(df[[kpi]]))) + geom_col() + ggtitle(kpi))}
+lapply(variable_list, covid_time_graphs)
+```
 
 
 
 
 # Graphs and tables that have been checked and relevant :
-## covid time VS atopic diseases
+## covid time VS no_is_atopic
 ```{r, warning=F}
-atopic_longer_count <- df %>% select(c(exploreatory_variables, covid_time)) %>% group_by(covid_time) %>% summarise_if(is.numeric, sum) %>% pivot_longer(cols  =exploreatory_variables, names_to = "chronic_disease", values_to = "count") 
+no_is_atopic = c('HRAD_first_year', 'AD_first_year', 'FA_first_year', 'ABX_fisrt_year',
+                            'HRAD_second_year', 'AD_second_year', 'FA_second_year', 'ABX_second_year')
+
+atopic_longer_count <- df %>% select(c(no_is_atopic, covid_time,)) %>% drop_na() %>% group_by(covid_time) %>% summarise_if(is.numeric, mean) %>% pivot_longer(cols  =no_is_atopic, names_to = "chronic_disease", values_to = "mean") 
+
 atopic_longer_count <- atopic_longer_count %>% mutate(Born_at = ifelse(covid_time == 1, 'Up to March19', ifelse(covid_time == 2, 'March19 - March20', 'March20 - Feb21')))
 
-ggplot(atopic_longer_count, aes(Born_at, y = count, fill = as.factor(Born_at))) + 
+
+ggplot(atopic_longer_count, aes(covid_time, y = mean, fill = as.factor(covid_time))) + 
+  geom_col() + facet_wrap(~chronic_disease,4,2) + geom_text(aes(label = round(atopic_longer_count$mean,3)), vjust = 0, size = 3) + theme_bw() +scale_fill_manual(values=c('dodgerblue4', 'darkorange1', 'green4'),
+                    name = "Born at", labels =c('Up to March19','March19 - March20','March20 - Feb21')) + 
+  xlab("") + theme(axis.text.x = element_text( color = 'white')) + ylim(c(0,0.7))
+```
+## covid time VS is_atopic
+
+```{r}
+is_atopic = c('is_atopic_first_year', 'is_atopic_second_year')
+
+is_atopic_df <- df %>% select(c(is_atopic, covid_time,)) %>% drop_na() %>% group_by(covid_time) %>% summarise_if(is.numeric, mean) %>% pivot_longer(cols = is_atopic, names_to = "chronic_disease", values_to = "mean") 
+
+is_atopic_longer <- is_atopic_df %>% mutate(Born_at = ifelse(covid_time == 1, 'Up to March19', ifelse(covid_time == 2, 'March19 - March20', 'March20 - Feb21')))
+
+ggplot(is_atopic_longer, aes(covid_time, y = mean, fill = as.factor(covid_time))) + 
   geom_col() + theme_bw() +
-  facet_wrap(~chronic_disease,2,4) + 
+  facet_wrap(~chronic_disease) + 
   scale_fill_manual(values=c('dodgerblue4', 'darkorange1', 'green4'),
                     name = "Born at", labels =c('Up to March19','March19 - March20','March20 - Feb21')) + 
-  xlab("") + theme(axis.text.x = element_text(angle  = 90, colour='white')) 
+  xlab("")+  ylab("proportion") + theme(axis.text.x = element_text(color = 'white')) +
+  geom_text(aes(label = round(is_atopic_longer$mean,3)), vjust = 0, size = 3)
 ```
-## is atopic vs is atopic and corona
-```{r,fig.width=5}
+## covid time VS family 
 
-plot_df_1 <- df %>% select(covid_time, AD_first_year, AD_24_month, FA_first_year,food_allergy_24_month, ABX_fisrt_year,inhalation_24_month) %>% group_by(covid_time) %>% summarise(AD_first_year = sum(AD_first_year), AD_24_month = sum(AD_24_month), FA_first_year = sum(FA_first_year),food_allergy_24_month = sum(food_allergy_24_month), ABX_fisrt_year = sum(ABX_fisrt_year),inhalation_24_month = sum(inhalation_24_month)) %>% gather(chronic_disease, count, AD_first_year:inhalation_24_month, factor_key=TRUE)
+```{r, warning=F}
+atopic_binari_exp <- c('family_asthma', 'family_AD', 'family_Allergic_rhinitis', 'family_FA')
+new_df <- df %>% select(c(atopic_binari_exp, covid_time,)) %>% drop_na() %>% group_by(covid_time) %>% summarise_if(is.numeric, mean) %>% pivot_longer(cols = atopic_binari_exp, names_to = "chronic_disease", values_to = "mean") 
+new_df_longer <- new_df %>% mutate(Born_at = ifelse(covid_time == 1, 'Up to March19', ifelse(covid_time == 2, 'March19 - March20', 'March20 - Feb21')))
 
-plot_df_2 <- df %>% select(covid_time,is_atopic_first_year,is_atopic_second_year) %>% group_by(covid_time) %>% summarise(is_atopic_first_year= sum(is_atopic_first_year), is_atopic_second_year= sum(is_atopic_second_year)) %>% gather(chronic_disease, count, is_atopic_first_year:is_atopic_second_year, factor_key=TRUE)
-
-ggplot(plot_df_1,aes(x=chronic_disease, y= count, fill = as.factor(covid_time))) +
-    geom_col() + xlab("Chronic Disease") + ylab("Cases") +
-  scale_fill_manual(values=c('dodgerblue4', 'darkorange1', 'green4'),name = "Group") + theme_bw()
-
-ggplot(plot_df_2,aes(x=chronic_disease, y= count, fill = as.factor(covid_time))) + theme_bw() +
-    geom_col(position = "dodge")+ xlab("Chronic Disease") + ylab("Cases") +
-  scale_fill_manual(values=c('dodgerblue4', 'darkorange1', 'green4'),name = "Group")# + scale_fill_discrete(name = "Group")
+ggplot(new_df_longer, aes(covid_time, y = mean, fill = as.factor(covid_time))) + 
+  geom_col() + theme_bw() +
+  facet_wrap(~chronic_disease) + 
+  scale_fill_manual(values=c('dodgerblue4', 'darkorange1', 'green4'),
+                    name = "Born at", labels =c('Up to March19','March19 - March20','March20 - Feb21')) + 
+  xlab("") + ylab("proportion") + theme(axis.text.x = element_text(color = 'white')) +
+  geom_text(aes(label = round(new_df_longer$mean,3)), vjust = 0, size = 3) + ylim(c(0, 0.25))
 ```
-
-
-## number_of_ABX_first_year vs is atopic
-```{r}
-abx_count <- df %>% select(c(exploreatory_variables, number_of_ABX_first_year)) %>% drop_na() %>% 
-  group_by(number_of_ABX_first_year) %>% 
-  summarise_if(is.numeric, sum) %>% 
-  pivot_longer(cols  =exploreatory_variables, names_to = "chronic_disease", values_to = "count") 
-abx_count <- abx_count %>% filter(number_of_ABX_first_year >0)
-ggplot(abx_count, aes(number_of_ABX_first_year, count, fill = as.factor(number_of_ABX_first_year))) + geom_col() + theme_bw() +facet_wrap(~chronic_disease,4,2)
-```
-
-## number_ABX_treatment_24_months vs is atopic
-```{r}
-abx24_count <- df %>% select(c(exploreatory_variables, number_ABX_treatment_24_months)) %>% drop_na() %>% 
-  group_by(number_ABX_treatment_24_months) %>% 
-  summarise_if(is.numeric, sum) %>% 
-  pivot_longer(cols  =exploreatory_variables, names_to = "chronic_disease", values_to = "count") 
-
-abx24_count <- abx24_count %>% filter(number_ABX_treatment_24_months >0)
-
-ggplot(abx24_count, aes(number_ABX_treatment_24_months, count, fill = as.factor(number_ABX_treatment_24_months))) + geom_col() + theme_bw() +facet_wrap(~chronic_disease,4,2)
-```
-
 
 ## number_of_treatments VS covid time
-
-```{r}
+צריך להפוך את זה לגרף מוערם 
+```{r, warning=F}
 # how many treatment was given in different covid time groups 
 
-treatments_kpi <- c('number_of_ABX_first_year', 'number_ABX_treatment_24_months', 'number_inhalation','number_steroid_treat')
+treatments_kpi <- c('number_of_ABX_first_year', 'number_inhalation','number_steroid_treat')
 treatments_prop <- function(kpi){
   data <- df %>% select(covid_time, kpi) %>% filter(df[[kpi]] > 0)
   return(round(ftable(data[['covid_time']], data[[kpi]]) / rowSums(ftable(data[['covid_time']], data[[kpi]])),3))}
@@ -249,9 +272,27 @@ sapply(treatments_kpi, treatments_prop, simplify = FALSE)
 ```
 
 
+
+## גרף של גיל האמא 
+
+## השכלה של האמא 
+
+## כל הקטגוריים והבינאריים מול הקבוצות קורונה 
+
+## number_of_children
+
 # Not relevant graphs : 
 
 
+
+
+
+
+
+
+
+
+# Graphs that need to be checked : 
 
 ##Age of mother vs is atopic
 ```{r}
@@ -340,9 +381,6 @@ sapply(treatments_kpi, treatments_prop, simplify = FALSE)
 #     geom_col(position = "dodge") + scale_fill_discrete(name = "type_of_pregnancy")+ xlab("chronic_disease") + ylab("percent of disease")# +scale_fill_manual(values=c('dodgerblue4', 'darkorange1', 'green4'))
 ```
 
-
-
-# Graphs that need to be checked : 
 
 
 
